# chinese_learning_tool

./: LICENSE  README.md  pyproject.toml  test.py  update_to_pypi.bat  version_number_increase.py
chlt/: Chinese_learn.py  QGUI_widget.py  __init__.py  gif_play.py  playsound.py
