[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chlt"
version = "0.1.7"
authors = [
  { name="shawn yan wang", email="shawnyanwang@gmail.com" },
]
description = "It is a tool to learn how to read and write Chinese Characters."
readme = "README.md"
dependencies = [
      'gTTS>= 2.2.4',
      'pywin32>=302',
      'requests>=2.27.1',
      'tqdm>=4.63.0',
      'bs4>=0.0.1',
      'urllib3>=1.26.8',
      'Pillow>=9.0.1',
      'playsound>=1.2.2'

  ]

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitee.com/shawnyanwang/chinese-learning-tool"
"Bug Tracker" = "https://gitee.com/shawnyanwang/chinese-learning-tool/issues"
